# rfrp

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE  README.md  controller.toml  docker-compose.client.yml  docker-compose.controller.yml  docker-compose.node.yml  docker-compose.yml  rfrpc.toml  rfrps.toml
.claude/: settings.local.json
.github/workflows/: build.yml  ci.yml  docker.yml  release.yml
agent/: Cargo.toml
agent/src/: main.rs
agent/src/client/: config.rs  connection_manager.rs  connector.rs  mod.rs
agent/src/server/: client_logs.rs  config.rs  config_manager.rs  entity.rs  grpc_auth_provider.rs  grpc_client.rs  internal_api.rs  jwt.rs  local_auth_provider.rs  local_proxy_control.rs  mod.rs  proxy_server.rs  remote_auth_provider.rs  traffic.rs  traffic_limiter.rs
agent/src/server/entity/: client.rs  traffic_daily.rs  user_client.rs
agent/src/server/features/: mod.rs
agent/src/server/features/api/: mod.rs
agent/src/server/features/api/handlers/: auth.rs  client.rs  client_logs.rs  dashboard.rs  proxy.rs  system_config.rs  traffic.rs  user.rs
agent/src/server/features/proxy/: mod.rs
agent/src/server/middleware/: auth.rs
agent/src/server/migration/: m20250126_000002_create_system_config.rs
client/: Cargo.toml
client/src/: main.rs  windows_service.rs
client/src/client/: connection_manager.rs  connector.rs  grpc_client.rs  log_collector.rs  mod.rs
common/: Cargo.toml  build.rs
common/proto/: oxiproxy.proto  rfrp.proto
common/src/: config.rs  lib.rs  utils.rs
common/src/grpc/: mod.rs  pending_requests.rs
common/src/protocol/: auth.rs  client_config.rs  control.rs  mod.rs  node_register.rs  traffic.rs
common/src/tunnel/: mod.rs  protocol.rs  quic.rs  tcp.rs  traits.rs
controller/: Cargo.toml
controller/src/: auth.rs  client_stream_manager.rs  entity.rs  frps_client.rs  geo_ip.rs  grpc_agent_client_service.rs  grpc_agent_server_service.rs  grpc_server.rs  internal_api.rs  local_auth_provider.rs  main.rs  node_limiter.rs  node_manager.rs  port_limiter.rs  subscription_quota.rs  traffic.rs  traffic_limiter.rs
controller/src/api/: mod.rs
controller/src/api/handlers/: auth.rs  client.rs  client_config.rs  client_logs.rs  dashboard.rs  mod.rs  node.rs  proxy.rs  subscription.rs  system_config.rs  traffic.rs  user.rs  user_subscription.rs  version.rs
controller/src/config/: mod.rs
controller/src/entity/: client.rs  node.rs  proxy.rs  subscription.rs  system_config.rs  user.rs  user_node.rs  user_subscription.rs
controller/src/middleware/: auth.rs  mod.rs
controller/src/migration/: m20250119_000001_init.rs  m20250126_000002_create_system_config.rs  m20250203_000001_add_kcp_config.rs  m20250204_000001_add_kcp_enabled.rs  m20250204_000002_remove_kcp_port.rs  m20250213_000001_add_node.rs  m20250214_000001_add_node_tunnel_fields.rs  m20250214_000002_add_proxy_node_id.rs  m20250214_000003_create_user_node.rs  m20250215_000001_remove_unused_configs.rs  m20250224_000001_add_traffic_quota.rs  m20250224_000002_add_client_user_id.rs  m20250224_000003_remove_client_node_id.rs  m20250224_000004_remove_traffic_limits.rs  m20260224_000001_add_node_type.rs  m20260224_000002_add_port_limits.rs  m20260224_000003_add_node_public_ip.rs  m20260224_000004_create_subscription.rs  m20260225_000001_add_controller_configs.rs  m20260225_000002_remove_unused_quic_configs.rs  m20260225_000003_add_grpc_tls_config.rs  m20260226_000001_add_subscription_port_limit.rs  m20260226_000002_add_cert_content_config.rs  m20260227_000001_add_web_tls_config.rs  m20260228_000001_add_client_public_ip.rs  m20260228_000002_add_enable_registration_config.rs  m20260228_000003_add_node_limits.rs  m20260301_000001_add_proxy_group_id.rs  m20260301_000002_add_client_region.rs  m20260301_000003_add_user_quotas.rs  m20260301_000004_add_subscription_quotas.rs  m20260301_000005_add_subscription_quota_snapshots.rs  m20260302_000001_add_version_fields.rs  mod.rs
dashboard/: README.md  index.html  package-lock.json  package.json  vite.config.ts
dashboard/src/: App.css  App.tsx  index.css
dashboard/src/components/: ConfirmDialog.tsx  Layout.tsx  ProtectedRoute.tsx  Skeleton.tsx
dashboard/src/components/ui/: alert.tsx  button.tsx  card.tsx  input.tsx  (+1 more)
dashboard/src/contexts/: AuthContext.tsx  ToastContext.tsx
dashboard/src/lib/: api.ts  services.ts  types.ts  utils.ts
dashboard/src/pages/: Clients.tsx  Dashboard.tsx  Login.tsx  MySubscription.tsx  Nodes.tsx  Proxies.tsx  Register.tsx  Settings.tsx  Subscriptions.tsx  Traffic.tsx  UserSubscriptions.tsx  Users.tsx
data/: rfrps.db
node/: Cargo.toml
node/src/: main.rs
node/src/server/: grpc_auth_provider.rs  grpc_client.rs  local_proxy_control.rs  mod.rs  node_logs.rs  proxy_server.rs  speed_limiter.rs  traffic.rs  tunnel_manager.rs
rfrp-common/: Cargo.toml
rfrp-common/src/: lib.rs
rfrp-common/src/tunnel/: kcp.rs  quic.rs  traits.rs
rfrpc/: Cargo.toml
rfrpc/src/: client.rs  config.rs  main.rs
rfrps/: Cargo.toml
rfrps/src/: auth.rs  client_logs.rs  config.rs  config_manager.rs  entity.rs  jwt.rs  main.rs  server.rs  traffic.rs  traffic_limiter.rs
rfrps/src/config/: mod.rs
rfrps/src/entity/: client.rs  system_config.rs  user.rs
rfrps/src/features/: mod.rs
rfrps/src/features/api/: mod.rs
rfrps/src/features/api/handlers/: auth.rs  client.rs  client_logs.rs  dashboard.rs  mod.rs  proxy.rs  system_config.rs  traffic.rs
rfrps/src/features/proxy/: mod.rs
rfrps/src/handlers/: auth.rs  client.rs  dashboard.rs  mod.rs  proxy.rs  system_config.rs  traffic.rs  user.rs
rfrps/src/middleware/: auth.rs
rfrps/src/migration/: m20250126_000001_add_traffic_limit.rs  m20250128_000001_add_client_traffic_limit.rs  mod.rs
src/: client.rs  main.rs  server.rs
web/: README.md  package-lock.json  package.json  tailwind.config.ts
web/src/: App.css  App.tsx  api.ts  index.css  main.tsx
web/src/components/: Clients.tsx  Dashboard.tsx  LanguageSwitcher.tsx  Proxies.tsx  Traffic.tsx  index.ts
web/src/contexts/: AuthContext.tsx
web/src/i18n/: config.ts
web/src/pages/: Login.tsx  Users.tsx
(+2 files in other folders)
