[package]
name = "agent"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "agent"
path = "src/main.rs"

[dependencies]
# Shared
common = { path = "../common" }
tokio = { version = "1", features = ["full"] }
rustls = { version = "0.23", features = ["std"] }
anyhow = "1.0"
toml = "0.9.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1.43"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
chrono = { version = "0.4.43", features = ["serde"] }
async-trait = "0.1"

# CLI
clap = { version = "4.5", features = ["derive"] }

# Client deps (HTTP client for controller API)
reqwest = { version = "0.12", features = ["json"] }

# Server deps
quinn = { version = "0.11", features = ["rustls", "ring"] }
rcgen = "0.14.6"
sea-orm = { version = "1.1.19", features = ["sqlx-sqlite", "runtime-tokio-rustls", "macros"] }
sea-orm-migration = { version = "1.1.19", features = ["sqlx-sqlite", "runtime-tokio-rustls"] }
axum = "0.8"
tower-http = { version = "0.6", features = ["fs", "cors"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
jsonwebtoken = { version = "10.3.0", features = ["rust_crypto"] }
bcrypt = "0.18.0"
rand = "0.9.2"
