[package]
name = "client"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "client"
path = "src/main.rs"

[dependencies]
# Shared
common = { path = "../common" }
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
tokio-stream = "0.1"
rustls = { version = "0.23", features = ["std"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1.43"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
chrono = { version = "0.4.43", features = ["serde"] }
async-trait = "0.1"

# CLI
clap = { version = "4.5", features = ["derive"] }
self_update = { version = "0.41", features = ["archive-tar", "compression-flate2"] }

# gRPC
tonic = "0.12"
prost = "0.13"

# Daemon (Unix only)
[target.'cfg(unix)'.dependencies]
daemonize = "0.5"
libc = "0.2"

# Windows Service
[target.'cfg(windows)'.dependencies]
windows-service = "0.7"
windows-sys = { version = "0.59", features = ["Win32_System_Threading", "Win32_Foundation"] }
