[package]
name = "common"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
quinn = { version = "0.11", features = ["rustls", "ring"] }
rustls = { version = "0.23", features = ["std"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
tokio_kcp = "0.9.8"
tracing = "0.1"
yamux = "0.13"
tokio-util = { version = "0.7", features = ["compat"] }
futures = "0.3"
socket2 = { version = "0.6.2", features = ["all"] }
windows-sys = { version = "0.61.2", features = ["Win32_Networking_WinSock", "Win32_Foundation"] }
