[package]
name = "controller"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../common" }
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["net"] }
anyhow = "1.0"
toml = "0.9.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sea-orm = { version = "1.1.19", features = ["sqlx-sqlite", "runtime-tokio-rustls", "macros"] }
sea-orm-migration = { version = "1.1.19", features = ["sqlx-sqlite", "runtime-tokio-rustls"] }
async-trait = "0.1"
axum = "0.8"
tower-http = { version = "0.6", features = ["fs", "cors"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = "0.4"
tracing = "0.1.43"
tracing-subscriber = "0.3.22"
jsonwebtoken = { version = "10.3.0", features = ["rust_crypto"] }
bcrypt = "0.18.0"
rand = "0.9.2"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tonic = "0.12"
prost = "0.13"
clap = { version = "4.5", features = ["derive"] }

# Daemon (Unix only)
[target.'cfg(unix)'.dependencies]
daemonize = "0.5"
libc = "0.2"

# Windows
[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_System_Threading", "Win32_Foundation"] }
