[package]
name = "rfrp-common"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
quinn = { version = "0.11", features = ["rustls", "ring"] }
rustls = { version = "0.23", features = ["std"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
async-trait = "0.1"
tokio_kcp = "0.9.8"
tracing = "0.1"
