[package]
name = "rfrpc"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
quinn = { version = "0.11", features = ["rustls", "ring"] }
rustls = { version = "0.23", features = ["std"] }
rcgen = "0.13"
anyhow = "1.0"
toml = "0.9.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4.43", features = ["serde"] }