[package]
name = "rfrps"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
quinn = { version = "0.11", features = ["rustls", "ring"] }
rustls = { version = "0.23", features = ["std"] }
rcgen = "0.14.6"
anyhow = "1.0"
toml = "0.9.11"
serde = { version = "1.0", features = ["derive"] }
sea-orm = { version = "1.1.19", features = ["sqlx-sqlite", "runtime-tokio-rustls", "macros"] }
sea-orm-migration = { version = "1.1.19", features = ["sqlx-sqlite", "runtime-tokio-rustls"] }
async-trait = "0.1"
axum = "0.8"
tower-http = { version = "0.6", features = ["fs", "cors"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = "0.4"
tracing = "0.1.43"
tracing-subscriber = "0.3.22"
jsonwebtoken = "9.2"
bcrypt = "0.15"
rand = "0.8"
serde_json = "1.0"